--- a/.gitignore
+++ b/.gitignore
@@ -99,4 +99,35 @@ chess/libgtest.a
 chess/libgtest_main.a
 outline.txt
 
+### C++ ###
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
 
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+*.cmake
